// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FillInTheBlanks to match snapshot 1`] = `
<div
  className="border-b border-gray-500 leading-loose py-8 text-lg"
  onClick={[Function]}
>
  Do you know the way to 
  <span
    className="inline-flex flex-col leading-none"
  >
    <div
      className="self-center"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <input
        className=""
        data-testid="input"
        onChange={[Function]}
        placeholder="________________"
        style={
          Object {
            "boxSizing": "content-box",
            "width": "1px",
          }
        }
        value=""
      />
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        
      </div>
      <div
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "scroll",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
            "whiteSpace": "pre",
          }
        }
      >
        ________________
      </div>
    </div>
    <label
      className="self-center text-sm"
    >
      place
    </label>
  </span>
  ?
  <span
    className="inline-block ml-3 relative"
  >
    <input
      checked={false}
      className="hidden"
      data-testid="receM4Gus7HH43oLM"
      id="receM4Gus7HH43oLM"
      onChange={[Function]}
      type="checkbox"
    />
    <label
      className="cursor-pointer"
      htmlFor="receM4Gus7HH43oLM"
    >
      <div
        className="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
      />
      <div
        className="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0"
      />
    </label>
  </span>
  <button
    className="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-sm text-white"
    data-testid="copy-button"
    onClick={[Function]}
    type="button"
  >
    Ctrl+C
  </button>
</div>
`;

exports[`FillInTheBlanks toggle 1`] = `
<div>
  <div
    class="border-b border-gray-500 leading-loose py-8 text-lg"
  >
    Do you know the way to 
    <span
      class="bg-green-200"
    >
      San Jose
    </span>
    ?
    <span
      class="inline-block ml-3 relative"
    >
      <input
        class="hidden"
        data-testid="receM4Gus7HH43oLM"
        id="receM4Gus7HH43oLM"
        type="checkbox"
      />
      <label
        class="cursor-pointer"
        for="receM4Gus7HH43oLM"
      >
        <div
          class="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
        />
        <div
          class="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0 toggle__dot--checked"
        />
      </label>
    </span>
    <button
      class="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-sm text-white"
      data-testid="copy-button"
      type="button"
    >
      Ctrl+C
    </button>
  </div>
</div>
`;

exports[`FillInTheBlanks toggle 2`] = `
<div>
  <div
    class="border-b border-gray-500 leading-loose py-8 text-lg"
  >
    Do you know the way to 
    <span
      class="inline-flex flex-col leading-none"
    >
      <div
        class="self-center"
        style="display: inline-block;"
      >
        <input
          class=""
          data-testid="input"
          placeholder="________________"
          style="box-sizing: content-box; width: 2px;"
          value=""
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        />
        <div
          style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
        >
          ________________
        </div>
      </div>
      <label
        class="self-center text-sm"
      >
        place
      </label>
    </span>
    ?
    <span
      class="inline-block ml-3 relative"
    >
      <input
        class="hidden"
        data-testid="receM4Gus7HH43oLM"
        id="receM4Gus7HH43oLM"
        type="checkbox"
      />
      <label
        class="cursor-pointer"
        for="receM4Gus7HH43oLM"
      >
        <div
          class="w-6 h-3 bg-gray-400 rounded-full shadow-inner"
        />
        <div
          class="toggle__dot absolute w-4 h-4 bg-gray-300 rounded-full shadow inset-y-0 left-0"
        />
      </label>
    </span>
    <button
      class="bg-blue-500 focus:outline-none font-bold font-mono hover:bg-blue-700 ml-3 px-4 rounded-full text-sm text-white"
      data-testid="copy-button"
      type="button"
    >
      Ctrl+C
    </button>
  </div>
</div>
`;
